wx-core/include/generated/ffi_s.h

// CLASS: wxSplitterEvent
wxClassInfo *wxSplitterEvent_CLASSINFO();
int wxSplitterEvent_GetSashPosition(const wxSplitterEvent * self);
wxWindow * wxSplitterEvent_GetWindowBeingRemoved(const wxSplitterEvent * self);
int wxSplitterEvent_GetX(const wxSplitterEvent * self);
int wxSplitterEvent_GetY(const wxSplitterEvent * self);
void wxSplitterEvent_SetSashPosition(wxSplitterEvent * self, int pos);
void wxSplitterEvent_SetSize(wxSplitterEvent * self, int old_size, int new_size);
int wxSplitterEvent_GetOldSize(const wxSplitterEvent * self);
// CLASS: wxSplitterWindow
wxClassInfo *wxSplitterWindow_CLASSINFO();
wxSplitterWindow *wxSplitterWindow_new();
wxSplitterWindow *wxSplitterWindow_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxSplitterWindow_Create(wxSplitterWindow * self, wxWindow * parent, wxWindowID id, const wxPoint * point, const wxSize * size, long style, const wxString * name);
int wxSplitterWindow_GetMinimumPaneSize(const wxSplitterWindow * self);
double wxSplitterWindow_GetSashGravity(const wxSplitterWindow * self);
int wxSplitterWindow_GetSashPosition(const wxSplitterWindow * self);
int wxSplitterWindow_GetSashSize(const wxSplitterWindow * self);
int wxSplitterWindow_GetDefaultSashSize(const wxSplitterWindow * self);
wxWindow * wxSplitterWindow_GetWindow1(const wxSplitterWindow * self);
wxWindow * wxSplitterWindow_GetWindow2(const wxSplitterWindow * self);
void wxSplitterWindow_Initialize(wxSplitterWindow * self, wxWindow * window);
bool wxSplitterWindow_IsSashInvisible(const wxSplitterWindow * self);
bool wxSplitterWindow_IsSplit(const wxSplitterWindow * self);
void wxSplitterWindow_OnDoubleClickSash(wxSplitterWindow * self, int x, int y);
bool wxSplitterWindow_OnSashPositionChange(wxSplitterWindow * self, int new_sash_position);
void wxSplitterWindow_OnUnsplit(wxSplitterWindow * self, wxWindow * removed);
bool wxSplitterWindow_ReplaceWindow(wxSplitterWindow * self, wxWindow * win_old, wxWindow * win_new);
void wxSplitterWindow_SetMinimumPaneSize(wxSplitterWindow * self, int pane_size);
void wxSplitterWindow_SetSashGravity(wxSplitterWindow * self, double gravity);
void wxSplitterWindow_SetSashPosition(wxSplitterWindow * self, int position, bool redraw);
void wxSplitterWindow_SetSplitMode(wxSplitterWindow * self, int mode);
void wxSplitterWindow_SetSashInvisible(wxSplitterWindow * self, bool invisible);
bool wxSplitterWindow_SplitHorizontally(wxSplitterWindow * self, wxWindow * window1, wxWindow * window2, int sash_position);
bool wxSplitterWindow_SplitVertically(wxSplitterWindow * self, wxWindow * window1, wxWindow * window2, int sash_position);
bool wxSplitterWindow_Unsplit(wxSplitterWindow * self, wxWindow * to_remove);
void wxSplitterWindow_UpdateSize(wxSplitterWindow * self);
// CLASS: wxStaticBitmap
wxClassInfo *wxStaticBitmap_CLASSINFO();
wxStaticBitmap *wxStaticBitmap_new();
wxStaticBitmap *wxStaticBitmap_new1(wxWindow * parent, wxWindowID id, const wxBitmapBundle * label, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxStaticBitmap_Create(wxStaticBitmap * self, wxWindow * parent, wxWindowID id, const wxBitmapBundle * label, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
wxBitmap *wxStaticBitmap_GetBitmap(const wxStaticBitmap * self);
wxIcon *wxStaticBitmap_GetIcon(const wxStaticBitmap * self);
void wxStaticBitmap_SetBitmap(wxStaticBitmap * self, const wxBitmapBundle * label);
void wxStaticBitmap_SetIcon(wxStaticBitmap * self, const wxIcon * label);
// CLASS: wxStaticBox
wxClassInfo *wxStaticBox_CLASSINFO();
wxStaticBox *wxStaticBox_new();
wxStaticBox *wxStaticBox_new1(wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxStaticBox_Create(wxStaticBox * self, wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
// CLASS: wxStaticBoxSizer
wxClassInfo *wxStaticBoxSizer_CLASSINFO();
wxStaticBoxSizer *wxStaticBoxSizer_new(wxStaticBox * box_, int orient);
wxStaticBoxSizer *wxStaticBoxSizer_new1(int orient, wxWindow * parent, const wxString * label);
wxStaticBox * wxStaticBoxSizer_GetStaticBox(const wxStaticBoxSizer * self);
// CLASS: wxStaticLine
wxClassInfo *wxStaticLine_CLASSINFO();
wxStaticLine *wxStaticLine_new();
wxStaticLine *wxStaticLine_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxStaticLine_Create(wxStaticLine * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxStaticLine_IsVertical(const wxStaticLine * self);
int wxStaticLine_GetDefaultSize();
// CLASS: wxStaticText
wxClassInfo *wxStaticText_CLASSINFO();
wxStaticText *wxStaticText_new();
wxStaticText *wxStaticText_new1(wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxStaticText_Create(wxStaticText * self, wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxStaticText_IsEllipsized(const wxStaticText * self);
void wxStaticText_Wrap(wxStaticText * self, int width);
// CLASS: wxStatusBar
wxClassInfo *wxStatusBar_CLASSINFO();
wxStatusBar *wxStatusBar_new();
wxStatusBar *wxStatusBar_new1(wxWindow * parent, wxWindowID id, long style, const wxString * name);
bool wxStatusBar_Create(wxStatusBar * self, wxWindow * parent, wxWindowID id, long style, const wxString * name);
bool wxStatusBar_GetFieldRect(const wxStatusBar * self, int i, wxRect * rect);
int wxStatusBar_GetFieldsCount(const wxStatusBar * self);
wxStatusBarPane *wxStatusBar_GetField(const wxStatusBar * self, int n);
wxSize *wxStatusBar_GetBorders(const wxStatusBar * self);
wxString *wxStatusBar_GetStatusText(const wxStatusBar * self, int i);
int wxStatusBar_GetStatusWidth(const wxStatusBar * self, int n);
int wxStatusBar_GetStatusStyle(const wxStatusBar * self, int n);
void wxStatusBar_PopStatusText(wxStatusBar * self, int field);
void wxStatusBar_PushStatusText(wxStatusBar * self, const wxString * string, int field);
void wxStatusBar_SetFieldsCount(wxStatusBar * self, int number, const int * widths);
void wxStatusBar_SetMinHeight(wxStatusBar * self, int height);
void wxStatusBar_SetStatusStyles(wxStatusBar * self, int n, const int * styles);
void wxStatusBar_SetStatusText(wxStatusBar * self, const wxString * text, int i);
void wxStatusBar_SetStatusWidths(wxStatusBar * self, int n, const int * widths_field);
// CLASS: wxStatusBarPane
void wxStatusBarPane_delete(wxStatusBarPane *self);
wxStatusBarPane *wxStatusBarPane_new(int style, int width);
int wxStatusBarPane_GetWidth(const wxStatusBarPane * self);
int wxStatusBarPane_GetStyle(const wxStatusBarPane * self);
wxString *wxStatusBarPane_GetText(const wxStatusBarPane * self);
// CLASS: wxStdDialogButtonSizer
wxClassInfo *wxStdDialogButtonSizer_CLASSINFO();
wxStdDialogButtonSizer *wxStdDialogButtonSizer_new();
void wxStdDialogButtonSizer_AddButton(wxStdDialogButtonSizer * self, wxButton * button);
void wxStdDialogButtonSizer_Realize(wxStdDialogButtonSizer * self);
void wxStdDialogButtonSizer_SetAffirmativeButton(wxStdDialogButtonSizer * self, wxButton * button);
void wxStdDialogButtonSizer_SetCancelButton(wxStdDialogButtonSizer * self, wxButton * button);
void wxStdDialogButtonSizer_SetNegativeButton(wxStdDialogButtonSizer * self, wxButton * button);
// CLASS: wxStockPreferencesPage
void wxStockPreferencesPage_delete(wxStockPreferencesPage *self);
// CLASS: wxSysColourChangedEvent
wxClassInfo *wxSysColourChangedEvent_CLASSINFO();
wxSysColourChangedEvent *wxSysColourChangedEvent_new();
// CLASS: wxSystemSettings
void wxSystemSettings_delete(wxSystemSettings *self);
wxSystemSettings *wxSystemSettings_new();