wx-core/src/generated/ffi_s.rs


    // wxSplitterEvent
    pub fn wxSplitterEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxSplitterEvent_new(event_type: wxEventType, splitter: *mut c_void) -> *mut c_void;
    pub fn wxSplitterEvent_GetSashPosition(self_: *const c_void) -> c_int;
    pub fn wxSplitterEvent_GetWindowBeingRemoved(self_: *const c_void) -> *mut c_void;
    pub fn wxSplitterEvent_GetX(self_: *const c_void) -> c_int;
    pub fn wxSplitterEvent_GetY(self_: *const c_void) -> c_int;
    pub fn wxSplitterEvent_SetSashPosition(self_: *mut c_void, pos: c_int);
    pub fn wxSplitterEvent_SetSize(self_: *mut c_void, old_size: c_int, new_size: c_int);
    pub fn wxSplitterEvent_GetOldSize(self_: *const c_void) -> c_int;

    // wxSplitterWindow
    pub fn wxSplitterWindow_CLASSINFO() -> *mut c_void;
    pub fn wxSplitterWindow_new() -> *mut c_void;
    pub fn wxSplitterWindow_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxSplitterWindow_~wxSplitterWindow(self_: *mut c_void);
    pub fn wxSplitterWindow_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        point: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxSplitterWindow_GetMinimumPaneSize(self_: *const c_void) -> c_int;
    pub fn wxSplitterWindow_GetSashGravity(self_: *const c_void) -> c_double;
    pub fn wxSplitterWindow_GetSashPosition(self_: *const c_void) -> c_int;
    pub fn wxSplitterWindow_GetSashSize(self_: *const c_void) -> c_int;
    pub fn wxSplitterWindow_GetDefaultSashSize(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxSplitterWindow_GetSplitMode(self_: *const c_void) -> wxSplitMode;
    pub fn wxSplitterWindow_GetWindow1(self_: *const c_void) -> *mut c_void;
    pub fn wxSplitterWindow_GetWindow2(self_: *const c_void) -> *mut c_void;
    pub fn wxSplitterWindow_Initialize(self_: *mut c_void, window: *mut c_void);
    pub fn wxSplitterWindow_IsSashInvisible(self_: *const c_void) -> bool;
    pub fn wxSplitterWindow_IsSplit(self_: *const c_void) -> bool;
    pub fn wxSplitterWindow_OnDoubleClickSash(self_: *mut c_void, x: c_int, y: c_int);
    pub fn wxSplitterWindow_OnSashPositionChange(
        self_: *mut c_void,
        new_sash_position: c_int,
    ) -> bool;
    pub fn wxSplitterWindow_OnUnsplit(self_: *mut c_void, removed: *mut c_void);
    pub fn wxSplitterWindow_ReplaceWindow(
        self_: *mut c_void,
        win_old: *mut c_void,
        win_new: *mut c_void,
    ) -> bool;
    pub fn wxSplitterWindow_SetMinimumPaneSize(self_: *mut c_void, pane_size: c_int);
    pub fn wxSplitterWindow_SetSashGravity(self_: *mut c_void, gravity: c_double);
    pub fn wxSplitterWindow_SetSashPosition(self_: *mut c_void, position: c_int, redraw: bool);
    pub fn wxSplitterWindow_SetSplitMode(self_: *mut c_void, mode: c_int);
    pub fn wxSplitterWindow_SetSashInvisible(self_: *mut c_void, invisible: bool);
    pub fn wxSplitterWindow_SplitHorizontally(
        self_: *mut c_void,
        window1: *mut c_void,
        window2: *mut c_void,
        sash_position: c_int,
    ) -> bool;
    pub fn wxSplitterWindow_SplitVertically(
        self_: *mut c_void,
        window1: *mut c_void,
        window2: *mut c_void,
        sash_position: c_int,
    ) -> bool;
    pub fn wxSplitterWindow_Unsplit(self_: *mut c_void, to_remove: *mut c_void) -> bool;
    pub fn wxSplitterWindow_UpdateSize(self_: *mut c_void);

    // wxStaticBitmap
    pub fn wxStaticBitmap_CLASSINFO() -> *mut c_void;
    pub fn wxStaticBitmap_new() -> *mut c_void;
    pub fn wxStaticBitmap_new1(
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxStaticBitmap_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxStaticBitmap_GetBitmap(self_: *const c_void) -> *mut c_void;
    pub fn wxStaticBitmap_GetIcon(self_: *const c_void) -> *mut c_void;
    pub fn wxStaticBitmap_SetBitmap(self_: *mut c_void, label: *const c_void);
    pub fn wxStaticBitmap_SetIcon(self_: *mut c_void, label: *const c_void);
    // NOT_SUPPORTED: pub fn wxStaticBitmap_SetScaleMode(self_: *mut c_void, scale_mode: ScaleMode);
    // NOT_SUPPORTED: pub fn wxStaticBitmap_GetScaleMode(self_: *const c_void) -> ScaleMode;

    // wxStaticBox
    pub fn wxStaticBox_CLASSINFO() -> *mut c_void;
    pub fn wxStaticBox_new() -> *mut c_void;
    pub fn wxStaticBox_new1(
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    // BLOCKED: pub fn wxStaticBox_new2(parent: *mut c_void, id: c_int, label: *mut c_void, pos: *const c_void, size: *const c_void, style: c_long, name: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxStaticBox_~wxStaticBox(self_: *mut c_void);
    pub fn wxStaticBox_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    // BLOCKED: pub fn wxStaticBox_Create1(self_: *mut c_void, parent: *mut c_void, id: c_int, label: *mut c_void, pos: *const c_void, size: *const c_void, style: c_long, name: *const c_void) -> bool;

    // wxStaticBoxSizer
    pub fn wxStaticBoxSizer_CLASSINFO() -> *mut c_void;
    pub fn wxStaticBoxSizer_new(box_: *mut c_void, orient: c_int) -> *mut c_void;
    pub fn wxStaticBoxSizer_new1(
        orient: c_int,
        parent: *mut c_void,
        label: *const c_void,
    ) -> *mut c_void;
    pub fn wxStaticBoxSizer_GetStaticBox(self_: *const c_void) -> *mut c_void;

    // wxStaticLine
    pub fn wxStaticLine_CLASSINFO() -> *mut c_void;
    pub fn wxStaticLine_new() -> *mut c_void;
    pub fn wxStaticLine_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxStaticLine_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxStaticLine_IsVertical(self_: *const c_void) -> bool;
    pub fn wxStaticLine_GetDefaultSize() -> c_int;

    // wxStaticText
    pub fn wxStaticText_CLASSINFO() -> *mut c_void;
    pub fn wxStaticText_new() -> *mut c_void;
    pub fn wxStaticText_new1(
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxStaticText_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxStaticText_IsEllipsized(self_: *const c_void) -> bool;
    pub fn wxStaticText_Wrap(self_: *mut c_void, width: c_int);

    // wxStatusBar
    pub fn wxStatusBar_CLASSINFO() -> *mut c_void;
    pub fn wxStatusBar_new() -> *mut c_void;
    pub fn wxStatusBar_new1(
        parent: *mut c_void,
        id: c_int,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxStatusBar_~wxStatusBar(self_: *mut c_void);
    pub fn wxStatusBar_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxStatusBar_GetFieldRect(self_: *const c_void, i: c_int, rect: *mut c_void) -> bool;
    pub fn wxStatusBar_GetFieldsCount(self_: *const c_void) -> c_int;
    pub fn wxStatusBar_GetField(self_: *const c_void, n: c_int) -> *mut c_void;
    pub fn wxStatusBar_GetBorders(self_: *const c_void) -> *mut c_void;
    pub fn wxStatusBar_GetStatusText(self_: *const c_void, i: c_int) -> *mut c_void;
    pub fn wxStatusBar_GetStatusWidth(self_: *const c_void, n: c_int) -> c_int;
    pub fn wxStatusBar_GetStatusStyle(self_: *const c_void, n: c_int) -> c_int;
    pub fn wxStatusBar_PopStatusText(self_: *mut c_void, field: c_int);
    pub fn wxStatusBar_PushStatusText(self_: *mut c_void, string: *const c_void, field: c_int);
    pub fn wxStatusBar_SetFieldsCount(self_: *mut c_void, number: c_int, widths: *const c_void);
    pub fn wxStatusBar_SetMinHeight(self_: *mut c_void, height: c_int);
    pub fn wxStatusBar_SetStatusStyles(self_: *mut c_void, n: c_int, styles: *const c_void);
    pub fn wxStatusBar_SetStatusText(self_: *mut c_void, text: *const c_void, i: c_int);
    pub fn wxStatusBar_SetStatusWidths(self_: *mut c_void, n: c_int, widths_field: *const c_void);

    // wxStatusBarPane
    pub fn wxStatusBarPane_delete(self_: *mut c_void);
    pub fn wxStatusBarPane_new(style: c_int, width: c_int) -> *mut c_void;
    pub fn wxStatusBarPane_GetWidth(self_: *const c_void) -> c_int;
    pub fn wxStatusBarPane_GetStyle(self_: *const c_void) -> c_int;
    pub fn wxStatusBarPane_GetText(self_: *const c_void) -> *mut c_void;

    // wxStdDialogButtonSizer
    pub fn wxStdDialogButtonSizer_CLASSINFO() -> *mut c_void;
    pub fn wxStdDialogButtonSizer_new() -> *mut c_void;
    pub fn wxStdDialogButtonSizer_AddButton(self_: *mut c_void, button: *mut c_void);
    pub fn wxStdDialogButtonSizer_Realize(self_: *mut c_void);
    pub fn wxStdDialogButtonSizer_SetAffirmativeButton(self_: *mut c_void, button: *mut c_void);
    pub fn wxStdDialogButtonSizer_SetCancelButton(self_: *mut c_void, button: *mut c_void);
    pub fn wxStdDialogButtonSizer_SetNegativeButton(self_: *mut c_void, button: *mut c_void);

    // wxStockPreferencesPage
    pub fn wxStockPreferencesPage_delete(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxStockPreferencesPage_new(kind: Kind) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxStockPreferencesPage_GetKind(self_: *const c_void) -> Kind;

    // wxSysColourChangedEvent
    pub fn wxSysColourChangedEvent_CLASSINFO() -> *mut c_void;
    pub fn wxSysColourChangedEvent_new() -> *mut c_void;

    // wxSystemSettings
    pub fn wxSystemSettings_delete(self_: *mut c_void);
    pub fn wxSystemSettings_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxSystemSettings_GetColour(index: wxSystemColour) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxSystemSettings_GetFont(index: wxSystemFont) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxSystemSettings_GetMetric(index: wxSystemMetric, win: *mut c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxSystemSettings_GetScreenType() -> wxSystemScreenType;
    // NOT_SUPPORTED: pub fn wxSystemSettings_GetAppearance() -> wxSystemAppearance;
    // NOT_SUPPORTED: pub fn wxSystemSettings_HasFeature(index: wxSystemFeature) -> bool;

}
